Channel media pairing added for playlist generation
